--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %} Woops {% endblock %}
 
-{% block css %} 
+{% block css %}
 <style>
     .img-fluid{
         max-height: 500px;
@@ -10,8 +10,8 @@
 </style>
 {% endblock %}
 
-{% block body %} 
-Sorry! This site is down right now. Come back another time!
+{% block body %}
+Sorry! Our API site is down right now. Come back another time!
 <br><br>
 <img src="https://www.meme-arsenal.com/memes/b6d11b1c9655513b1c3d37ad72a1f206.jpg" class="img-fluid">
 {% endblock %}
