--- a/app/templates/burn.html
+++ b/app/templates/burn.html
@@ -37,6 +37,20 @@
 </div>
 <br>
 {{description}}
+{% if logged %}
+  <br> <br>
+  QUICK! Can't bear to see this cute creature burn in front of your eyes? <br>
+  Save 'em!
+  {% if fire > 0 %}
+  <form action="/hint" method="POST">
+      <input type="hidden" name="Question" value="{{question}}">
+      <input type="hidden" name="Choices" value="{{choices}}">
+      <input class="btn btn-secondary" type="submit" name="Hint Button" value="Use Extinguisher">
+  </form>
+  Fire Extinguishers You Have: {{fire}}
+  {% endif %}
+{% endif %}
+
 <br><br>
 <a role="button" href= "/trivia"class="btn btn-secondary">More Trivia</a>
 
