--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,6 +34,9 @@
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/leaderboard">leaderboard</a>
+                </li>
                 {% if session['username'] %}
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
