--- a/app/templates/leaderboard.html
+++ b/app/templates/leaderboard.html
@@ -12,9 +12,9 @@
 
 {% block body %}
 
-{% for i in order %}
+{% for i, num in order %}
 
-<br>1. {{i[0]}}</br>
+<br>1. {{i[0]}}: {{num}} Collectibles</br>
 
 {% endfor %}
 
