--- a/app/templates/leaderboard.html
+++ b/app/templates/leaderboard.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block body %}
-
+<h1>Leaderboard</h1>
 {% for i, num in order %}
 
 <br>1. {{i[0]}}: {{num}} Collectibles</br>
