--- a/app/templates/leaderboard.html
+++ b/app/templates/leaderboard.html
@@ -14,7 +14,7 @@
 <h1>Leaderboard</h1>
 {% for i, num in order %}
 
-<br>1. {{i[0]}}: {{num}} Collectibles</br>
+<br>1. {{i}}: {{num}} Collectibles</br>
 
 {% endfor %}
 
